syntax = "proto3";

option java_package = "com.boswelja.autoevent.eventextractor";

message ExtractorSettings {
    enum ExtractorLanguage {
        DETECT = 0;
        ARABIC = 1;
        CHINESE = 2;
        DUTCH = 3;
        ENGLISH = 4;
        FRENCH = 5;
        GERMAN = 6;
        ITALIAN = 7;
        JAPANESE = 8;
        KOREAN = 9;
        POLISH = 10;
        PORTUGUESE = 11;
        RUSSIAN = 12;
        SPANISH = 13;
        THAI = 14;
        TURKISH = 15;
    }

    ExtractorLanguage language = 1;
    bool extractLocation = 2;
    bool extractEmails = 3;
    bool ignoreAllDayEvents = 4;

    int64 defaultEventDuration = 5;
}
